2025-04-15T01:43:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14459409954 # 917
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-15
* notice: last 14d: unq all: 21 44
* notice: prev accum: outdated-unq outdated-all / unq all: 4063 8702 / 4101 8750
* notice: next accum: outdated-unq outdated-all / unq all: 4063 8702 / 4102 8751
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -5 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-01 2025-04-14]

2025-04-14T12:41:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14445887847 # 916
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-14
* notice: last 14d: unq all: 22 48
* notice: prev accum: outdated-unq outdated-all / unq all: 4062 8701 / 4101 8750
* notice: next accum: outdated-unq outdated-all / unq all: 4063 8702 / 4101 8750
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-31] / []

2025-04-14T01:44:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14435681266 # 915
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-14
* notice: last 14d: unq all: 22 49
* notice: prev accum: outdated-unq outdated-all / unq all: 4062 8701 / 4101 8749
* notice: next accum: outdated-unq outdated-all / unq all: 4062 8701 / 4101 8750
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-04-13]

2025-04-13T12:37:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14429535729 # 914