@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-15T01:43:14Z",
-  "count_outdated" : 8702,
-  "uniques_outdated" : 4063,
-  "count" : 8751,
-  "uniques" : 4102,
+  "timestamp" : "2025-04-15T12:41:01Z",
+  "count_outdated" : 8708,
+  "uniques_outdated" : 4067,
+  "count" : 8752,
+  "uniques" : 4103,
   "clones" : [
-    {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 5, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 3, 4 ]
-    },
     {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 8,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2025-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
