@@ -3,11 +3,6 @@
   "uniques": 21,
   "clones": [
     {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 8,
       "uniques": 7
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2025-04-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
